added publish profiles

--- a/.gitignore
+++ b/.gitignore
@@ -95,8 +95,8 @@ DocProject/Help/html
 publish/
 
 # Publish Web Output
-*.Publish.xml
-*.pubxml
+#*.Publish.xml
+#*.pubxml
 
 # NuGet Packages Directory
 ## TODO: If you have NuGet Package Restore enabled, uncomment the next line
