--- a/Seranet.Api/Web.config
+++ b/Seranet.Api/Web.config
@@ -9,11 +9,19 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+ 
+    <!-- Service Authorizations (use lower case)-->
+    <add key="/api/contacts" value="seranet\hasithy, seranet\shehanis, seranet\shenikah, seranet\hashinis" />
   </appSettings>
+  
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
     <customErrors mode="Off" />
+    <authentication mode="Windows" />
+    <authorization>
+      <deny users="?" />
+    </authorization>
   </system.web>
   <system.webServer>
     <modules runAllManagedModulesForAllRequests="true" />
