--- a/Seranet.Api.Authentication/Seranet.Api.Authentication.csproj
+++ b/Seranet.Api.Authentication/Seranet.Api.Authentication.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Data.Entity" />
+    <Reference Include="System.DirectoryServices" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
