--- a/Seranet.Api/Web.config
+++ b/Seranet.Api/Web.config
@@ -11,7 +11,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
  
     <!-- Service Authorizations (use lower case)-->
-    <add key="contacts" value="seranet\shehanis, seranet\shenikah, seranet\hashinis" />
+    <add key="contacts" value="seranet\shehanis, seranet\shenikah, seranet\surangab, seranet/hasithy" />
   </appSettings>
   
   <system.web>
